# les-beffroyables

./: .gitignore  chariotpinceascenceur.SLDPRT  longuetigeguidageascenceur.SLDPRT  paroi latérale.SLDPRT  pousse ascenceur.SLDPRT  silo_immeuble.SLDASM  tige guidage ascenceur.SLDPRT
asserv_shield/shield/: eagle.epf  motor_shield.b#9  motor_shield.brd  motor_shield.csv  motor_shield.sch  partlist.csv  partlist.txt
bbb_main_code/: CMakeLists.txt  Makefile  asserv.h  control.cpp  encoder.cpp  encoder.h  main.cpp  parameter.cpp  parameter.txt  parser.cpp  parser.h  position.h  rc_defs.h  robot
bbb_main_code/asserv/: CMakeLists.txt  asserv.cpp  asserv.h  control.cpp  control.h  encoder.cpp  encoder.h  lidar.cpp  lidar.h  parameter.h  parameter.txt  parameter.txt.old  position.cpp  servo.cpp  servo.h  types.h
bbb_main_code/asserv/lidar/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
bbb_main_code/asserv/lidar/app/: node.cpp
domotique/: domotique.ino
ia/: 10cm.py  IA.py  IA_simple.py  abbee.sh  abeille.py  arret urgence.txt  bee.py  bonbons.py  boot.py  bspe.py  deversoir.py  homologation.py  i.old.py  i.py  i2.py  ia_2019.py  ia_2020.py  ia_2021.py  ia_sav.py  lcddriver.py  opponent.py  pid.py  robot.py  robot_web.py  servo.py  square.py  stbe.py  stop0.py  test_unit_com.py  timer.py
mécanique/cubes/: engrenageascenceur.SLDPRT
mécanique/lance_balles/: Tube coude v14 2.stl
mécanique/petit_robot/face à découper/: arrrière.dxf  base.dxf  côté.dxf  déoupe complète.crv  toit.dxf
télémétrie/1er_test_53L0A1/: 1er_test_53L0A1.ino  stmpe1600_class.h
télémétrie/final/: final.ino
télémétrie/test_adafruit_lib/: test_adafruit_lib.ino
télémétrie/very_fast/: very_fast.ino
